
syntax = "proto3";

message Message {

    enum MessageType {
        PING = 0;
        ACK = 1;
        REQ = 2;
        RES = 3;
        RADIO = 4;
        JOIN_REQ = 5;
        JOIN_ACCEPT = 6;
        PING_REQ = 7;
    }
    
    string senderHost = 1;
    int32 senderPort = 2;
    string requestId = 3;
    MessageType messageType = 4;
    string message = 5;

}

message ServiceArgument {
    string fieldName = 1;
    oneof field_value {
        string str_val
        string str_val
    }
}

message ServiceDefinition {
    string senderHost = 1;
    int32 senderPort = 2;
    string requestId = 3;
    string serviceName = 4;
    repeated ServiceArgument arguments = 5;
    repeated ServiceArgument results = 6;
}

message ServiceRequest {
    string senderHost = 1;
    int32 senderPort = 2;
    string requestId = 3;
    string serviceName = 4;
    repeated ServiceArgument arguments = 5;
}

message ServiceResponse {
    string senderHost = 1;
    int32 senderPort = 2;
    string requestId = 3;
    string serviceName = 4;
    repeated ServiceArgument results = 5;
}